--- a/angular-client/package.json
+++ b/angular-client/package.json
@@ -20,10 +20,13 @@
     "@angular/platform-browser": "^6.0.2",
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
+    "@types/chartist": "0.9.40",
     "angular2-modal": "^3.0.3",
     "bootstrap": "^4.1.1",
+    "chartist": "0.11.0",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "ng-chartist": "2.0.0-beta.1",
     "ngx-bootstrap": "^3.0.0",
     "ngx-modialog": "^5.0.1",
     "rxjs": "^6.0.0",
